--- a/assets/style.css
+++ b/assets/style.css
@@ -1,1 +1,744 @@
+*,*::before,
+*::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root{
+    --hue: 218;
+    --main-color: hsl(var(--hue), 50%, 50%);
+    --main-light: hsl(var(--hue), 50%, 80%);
+    --main-dark: hsl(var(--hue), 50%, 20%);
+    --nav-bg: var(--main-color);
+    --text-color: #333;
+    --light-color: #fff;
+    --light-grey: #ddd;
+    --grey-color: #777;
+    --body-bg: #efefef;
+}
+.dark-theme{
+    --main-color: hsl(var(--hue), 50%, 80%);
+    --nav-bg: #333;
+    --text-color: #ddd;
+    --light-color: #333;
+    --light-grey: #666;
+    --grey-color: #ccc;
+    --body-bg: #444;
+}
+html{
+    scroll-behavior: smooth;
+}
+body{
+    font-family: "Poppins", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--text-color);
+    background: var(--body-bg);
+    height: 100%;
+    overflow-x: hidden;
+}
+img{
+    max-width: 100%;
+    display: block;
+    vertical-align: middle;
+    object-fit: cover;
+}
+a{
+    color: inherit;
+    text-decoration: none;
+}
+a:hover,
+a:focus,
+a:active{
+    opacity: .8;
+}
+ol,ul{
+    list-style: none;
+}
+h1,h2,h3,h4,h5,h6{
+    line-height: 1.2;
+}
+input,textarea,
+select,button{
+    font: inherit;
+}
+input[type='text'],
+input[type='email'],
+input[type='password'],
+input[type='search'],
+input[type='number']{
+    min-height: 2.5em;
+    padding: .5em;
+    width: 100%;
+    border: 1px solid var(--light-grey);
+    outline: none;
+    font-size: 14px;
+}
+input:focus{
+    border-color: var(--grey-color);
+}
+textarea{
+    min-height: 5rem;
+    border: 1px solid var(--light-grey);
+    width: 100%;
+    padding: .5em;
+    outline: none;
+    resize: vertical;
+    font-size: 14px;
+}
+textarea:focus{
+    border-color: var(--grey-color);
+    border-radius: 5px;
+}
+button,
+.btn,input[type='submit']{
+    border: none;
+    background: var(--light-color);
+    display: inline-block;
+    padding: .5em 1em;
+    cursor: pointer;
+    color: inherit;
+    font-size: 14px;
+}
 
+/* Navbar Fixed */
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    background: var(--nav-bg);
+    padding: 5px 5%;
+    height: 60px;
+    z-index: 99;
+}
+.logo{
+    width: 160px;
+    margin-right: 1em;
+}
+.nav-left,
+.nav-right{
+    display: flex;
+    align-items: center;
+}
+.nav-left ul{
+    display: flex;
+}
+.nav-left ul li img{
+    width: 28px;
+    margin: 0 1em;
+}
+.user-profile-pic img{
+    width: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.search-box{
+background: var(--body-bg);
+width: 1005;
+max-width: 350px;
+border-radius: 20px;
+display: flex;
+align-items: center;
+padding: 0 15px;
+overflow: hidden;
+margin-right: 1em;
+}
+.search-box img{
+    height: 18px;
+}
+.search-box input{
+    background: transparent;
+    border: none;
+}
+.online{
+    position: relative;
+}
+.online::after{
+    content: "";
+    width: 10px;
+    height: 10px;
+    border: 2px solid var(--light-color);
+    border-radius: 50%;
+    background: #41db51;
+    position: absolute;
+    bottom: 2px;
+    right: 0;
+}
+.settings-menu{
+    background: var(--light-color);
+    position: absolute;
+    top: 108%;
+    right: 5%;
+    width: 300px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    z-index: 99;
+    border-radius: 5px;
+    overflow: hidden;
+    transition: .3s ease-in-out;
+    max-height: 0;
+}
+#dark-btn{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 45px;
+    height: 20px;
+    background: var(--grey-color);
+    border-radius: 13px;
+    padding: 2px 3px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    transition: .3s ease;
+}
+#dark-btn span{
+    width: 18px;
+    height: 18px;
+    background: var(--light-color);
+    display: inline-block;
+    border-radius: 50%;
+}
+#dark-btn.dark-mode{
+    background: var(--text-color);
+    padding-left: 24px;
+}
+.display-menu{
+    max-height: 450px;
+}
+.upper-settings{
+    padding: 1em 1em 0;
+}
+.upper-setting{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1em;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 1em;
+}
+.upper-setting img{
+    width: 45px;
+    border-radius: 50%;
+}
+.upper-settings .user-text{
+    font-size: 14px;
+    margin-left: 1em;
+}
+.upper-setting .user-text a{
+    color: var(--main-color);
+    font-size: 12px;
+}
+.settings-links{
+    display: flex;
+    align-items: center;
+    padding: 0 1em;
+    margin-bottom: 1em;
+    font-size: 14px;
+}
+.settings-links img{
+    width: 35px;
+    margin-right: 1em;
+}
+.settings-links a{
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.settings-links a:hover{
+    color: var(--main-color);
+}
+.settings-links a img{
+    width: 16px;
+    height: 1em;
+}
+/* Navbar Fixed */
+
+/* Sidebars Starts */
+.container{
+    display: flex;
+    justify-content: space-between;
+    padding: 13px 5%;
+}
+.left-sidebar{
+    flex-basis: 25%;
+    position: sticky;
+    top: 60px;
+    align-self: flex-start;
+}
+.right-sidebar{
+    flex-basis: 25%;
+    position: sticky;
+    top: 60px;
+    align-self: flex-start;
+    background: var(--light-color);
+    padding: 20px;
+    color: var(--grey-color);
+    border-radius: 5px;
+}
+.main-content{
+    width: 47%;
+}
+
+.left-links{
+    border-bottom: 1px solid #ccc;
+}
+.left-links ul li a{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1.5em;
+    width: 100%;
+    color: var(--grey-color);
+}
+.left-links ul li:last-child > a{
+    color: var(--main-color);
+}
+.left-links ul li a img{
+    width: 1.5rem;
+    margin-right: 1em;
+}
+
+.left-shortcuts{
+    margin-top: 1.5em;
+}
+.left-shortcuts p {
+    margin-bottom: 1.5em;
+}
+.left-shortcuts ul li a{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1.5em;
+}
+.left-shortcuts ul li a img{
+    width: 2.5rem;
+    border-radius: 5px;
+    margin-right: 1em;
+}
+
+.sidebar-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1em;
+}
+.sidebar-title a{
+    color: var(--main-color);
+    font-size: 14px;
+}
+.events{
+    display: flex;
+    font-size: 14px;
+    margin: 1em 0
+}
+.left-event{
+    border-radius: 10px;
+    width: 65px;
+    height: 65px;
+    padding: 10px;
+    margin-right: 1.5em;
+    overflow: hidden;
+    text-align: center;
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
+    position: relative;
+}
+.left-event span{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: var(--main-color);
+    color: var(--light-color);
+    width: 100%;
+    padding: 4px 0;
+    font-size: 12px;
+}
+.right-event p,
+.right-event a{
+    font-size: 12px;
+    margin-top: 5px;
+}
+.right-event a{
+    color: var(--main-color);
+}
+.sidebar-ads{
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 1em;
+}
+.online-list{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1em;
+}
+.online-list img{
+    width: 40px;
+    border-radius: 50%;
+}
+.online-list p{
+    margin-left: 1em;
+}
+/* Sidebars Ends */
+
+/* Main Starts */
+.story-gallary{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1em;
+}
+.story{
+    flex-basis: 18%;
+    padding-top: 32%;
+    background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,0.5)), url(../images/status-1.png);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    z-index: 2;
+}
+.story1{
+    background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,0.5)), url(../images/status-2.png);
+}
+.story2{
+    background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,0.5)), url(../images/status-3.png);
+}
+.story3{
+    background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,0.5)), url(../images/status-4.png);
+}
+.story4{
+    background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,0.5)), url(../images/status-5.png);
+}
+.story img{
+    position: absolute;
+    width: 45px;
+    top: 10px;
+    left: 10px;
+    border-radius: 50%;
+    border: 2px solid var(--light-grey);
+    cursor: pointer;
+}
+.story .fa-plus{
+    font-weight: 900;
+    color: #fff;
+    border: 2px solid #fff;
+    padding: .5em;
+    border-radius: 50%;
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+}
+.story p{
+    position: absolute;
+    bottom: 10px;
+    left: 15px;
+    text-align: center;
+    font-size: 14px;
+    color: var(--light-color);
+}
+.write-post-container{
+    width: 100%;
+    background: var(--light-color);
+    padding: 1em;
+    border-radius: 5px;
+}
+.user-profile{
+    display: flex;
+    align-items: center;
+}
+.user-profile img{
+    width: 45px;
+    border-radius: 50%;
+    margin-right: 1em;
+}
+.user-profile p{
+    margin-bottom: -5px;
+    font-weight: 500;
+}
+.user-profile small{
+    color: var(--grey-color);
+    font-size: 12px;
+    cursor: pointer;
+}
+.post-input-container{
+    padding-top: 1.5em;
+}
+.add-post-links{
+    margin-top: 1em;
+    display: flex;
+}
+.add-post-links a{
+    display: flex;
+    align-items: center;
+    color: var(--grey-color);
+    margin-right: 1.5em;
+    font-size: 14px;
+}
+.add-post-links a img{
+    width: 20px;
+    margin-right: .5em;
+}
+.post-container{
+    background: var(--light-color);
+    padding: 20px;
+    margin-top: 1em;
+    border-radius: 5px;
+}
+.post-text{
+    color: var(--grey-color);
+    margin-top: 1em;
+    font-size: 14px;
+}
+.post-text span{
+    color: var(--text-color);
+    font-weight: 500;
+}
+.post-text a{
+    color: var(--main-color);
+}
+.post-image img{
+    margin-top: 1em;
+    border-radius: 5px;
+}
+.post-bottom{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1em;
+}
+.activity-icons{
+    display: flex;
+}
+.activity-icons div{
+    display: inline-flex;
+    align-items: center;
+    margin-right: 1em;
+    cursor: pointer;
+}
+.activity-icons div img{
+    margin-right: 5px;
+}
+.activity-icons img{
+    width: 20px;
+}
+.post-bottom .profile-icon{
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.post-bottom .profile-icon img{
+    width: 25px;
+    border-radius: 50%;
+    margin-right: .5em;
+}
+.user-info{
+    display: flex;
+    justify-content: space-between;
+}
+.load-more{
+    text-align: center;
+    margin-top: 1em;
+}
+footer{
+    text-align: center;
+    margin: 1em 0;
+}
+
+/* Main Ends */
+
+/* Profile Page */
+
+.profile-container{
+    padding: 20px 15%;
+    color: var(--grey-color);
+}
+.cover-image img{
+    border-radius: 5px;
+    margin-bottom: 1em;
+}
+.profile-details{
+    background: var(--light-color);
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.users-profile{
+    display: flex;
+    align-items: flex-start;
+}
+.users-profile img{
+    width: 100px;
+    border-radius: 5px;
+    margin-right: 1em;
+}
+.users-profile p{
+    font-size: 14px;
+    margin: .5em 0;
+}
+.mutuals{
+    display: flex;
+    margin-top: .5em;
+}
+.mutuals img{
+    width: 25px;
+    border-radius: 50%;
+    margin-right: .5em;
+}
+
+.pd-right button{
+    padding: 0;
+}
+.pd-right button a{
+    display: flex;
+    align-items: center;
+    background: var(--main-color);
+    color: var(--light-color);
+    padding: .5em 1em;
+    font-size: 14px;
+}
+.pd-right button:first-child a{
+    background: var(--light-grey);
+    color: var(--text-color);
+    margin-right: .5em;
+}
+.pd-right button a img{
+    width: 13px;
+    height: 13px;
+    margin-right: .5em;
+}
+.see-more{
+    text-align: right;
+}
+.see-more a{
+    background: var(--light-grey);
+    padding: .8em 1em;
+    display: inline-block;
+    margin: .5em 0 0;
+}
+.see-more a img{
+    width: 1em;
+}
+
+.profile-info{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1em;
+}
+.info-col{
+    flex-basis: 33%;
+}
+.post-col{
+    flex-basis: 65%;
+}
+.profile-intro{
+    background: var(--light-color);
+    padding: 20px;
+    border-radius: 5px;
+    margin-bottom: 1em;
+    text-align: center;
+}
+.profile-intro p{
+    font-size: 14px;
+    margin: .5em 0 1em;
+    padding-bottom: 1em;
+    border-bottom: 1px solid var(--light-grey);
+}
+.profile-intro p img{
+    display: inline;
+    width: 20px;
+    height: 20px;
+}
+.profile-intro ul{
+    text-align: left;
+}
+.profile-intro ul li{
+    display: inline-flex;
+    width: 100%;
+    text-align: left;
+    font-size: 14px;
+    margin-bottom: 1em;
+}
+.profile-intro ul li img{
+    width: 1.5em;
+    margin-right: 1em;
+}
+.profile-imgs{
+    background: var(--light-color);
+    padding: 20px;
+    border-radius: 5px;
+}
+.profile-title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.profile-title a{
+    color: var(--main-color);
+    font-size: 14px;
+}
+.profile-imgs .para{
+    font-size: 14px;
+    margin: .5em 0 1em;
+}
+.profile-images{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: .5em;
+}
+.profile-images img{
+    cursor: pointer;
+    padding-bottom: 25px;
+    width: 100%;
+}
+.profile-images div{
+    position: relative;
+}
+.profile-images p{
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 22;
+    font-size: 14px;
+}
+/* Profile Page Ends */
+
+
+
+/* Media Queries */
+
+@media (max-width: 900px){
+    .left-sidebar,
+    .right-sidebar,
+    .search-box{
+        display: none;
+    }
+    .main-content{
+        flex-basis: 100%;
+    }
+
+    .profile-container{
+        padding: 20px 5%;
+    }
+}
+
+@media (max-width: 768px){
+    .profile-details{
+        flex-direction: column;
+    }
+    .pd-right{
+        margin-top: 2em;
+    }
+    .see-more{
+        text-align: left;
+    }
+    .profile-info{
+        flex-direction: column;
+    }
+    .profile-imgs{
+        margin-bottom: 1em;
+    }
+}
+
+
+/* Media Queries Ends */
